--- a/publicV1/index.html
+++ b/publicV1/index.html
@@ -196,7 +196,8 @@
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 <br/>
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">It’s a stress buster if you use random button. Play <a href="https://t.co/j7USyS3AL7">https://t.co/j7USyS3AL7</a> <a href="https://t.co/7X6LkMovLC">pic.twitter.com/7X6LkMovLC</a></p>&mdash; Evolution vs Business Strategies (@EvolutionaryWay) <a href="https://twitter.com/EvolutionaryWay/status/1586612952433500160?ref_src=twsrc%5Etfw">October 30, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Stress busting effets. Take a break for a while. Play <a href="https://t.co/emfeFPY4EU">https://t.co/emfeFPY4EU</a> <a href="https://t.co/vZxsa7lYxp">pic.twitter.com/vZxsa7lYxp</a></p>&mdash; Evolutionary Way (@EvolutionaryWay) <a href="https://twitter.com/EvolutionaryWay/status/1587374696261042176?ref_src=twsrc%5Etfw">November 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br/>
 
         <!-- Call to Action-->
