css edited for text size , table size as per devic

--- a/publicV1/index.html
+++ b/publicV1/index.html
@@ -46,8 +46,8 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h4 class="mb-1">Evolution Game</h4></br>
-                <p class="leffad mb-5"><em>Every cell interacts with its eight neighbours, horizontally, vertically, and diagonally adjacent.
+                <h4 class="mb-1">Evolution Game Rules</h4></br>
+                <p class="leffad mb-3"><em>Every cell interacts with its eight neighbours, horizontally, vertically, and diagonally adjacent.
                     <br/>
                     <br/>
                    Every generation evolves according to the following 4 rules:
@@ -69,16 +69,13 @@
         <section class="content-section bg-light" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-10">
-
-                        <p class="lead mb-5">                            
+                    <div class="col-lg-10">                                                   
                       <p>Click random -> play buttons</p>
                      <p> Cells die or reproduce as per above rules but you can click on a cell to kill it or make it alive to change the outcome of the rules. Keep the cells alive for most generations.
                    </p>
-                </p>
-
                 <h5 id="generationCounter">Generation - 0</h5>
             </br>
+			<div id="widthheight"></div>
             <!-- logic grid -->
         <div id="gridContainer"> </div>
    
@@ -147,7 +144,7 @@
         <!-- Callout-->
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
-                <p class="mx-auto mb-5">
+                <p class="mx-auto mb-4">
                     If you'd like to say thanks, I'd appreciate a coffee 😊
                 </p>
                 <a href="https://www.buymeacoffee.com/EvolutionGame" onclick="buyMeCoffeeClicked()" target="_blank"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=EvolutionGame&button_colour=FF5F5F&font_colour=ffffff&font_family=Bree&outline_colour=000000&coffee_colour=FFDD00" /></a>
