--- a/publicV1/index.html
+++ b/publicV1/index.html
@@ -94,7 +94,7 @@
                     <!-- logic buttons -->
                     <div class="controls">
                         <button id="random"><span>Random</span></button>
-                        <button id="start"><span>Start</span></button>
+                        <button id="start"><span>Play</span></button>
                         <button id="clear"><span>Clear</span></button>
 
 
@@ -172,7 +172,7 @@
     <section class="callout">
         <div class="container px-4 px-lg-5 text-center">
             <p class="mx-auto mb-5">
-                Human brain is the most complex thing in the universe. Evolution of Intelligent design? Confused about
+                Human brain is the most complex thing in the universe. <b>Evolution of Intelligent design?</b> Confused about
                 how evolution works? If you understand the rules of Physics and Chemistry, you can see the possibility
                 of atoms coming together to form a complex thing like our brain.
                 Read Best Books about Evolution and Origin of Life to Boost Your Understanding. Few books I read here
@@ -188,7 +188,7 @@
 
     </section>
 
-
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Stress busting effets. Take a break for a while. Play <a href="https://t.co/cEweLzxAWV">https://t.co/cEweLzxAWV</a> <a href="https://t.co/mq87bbATlW">pic.twitter.com/mq87bbATlW</a></p>&mdash; Evolutionary Way (@EvolutionaryWay) <a href="https://twitter.com/EvolutionaryWay/status/1589941235837722624?ref_src=twsrc%5Etfw">November 8, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Stress busting effets. Take a break for a while. Play <a href="https://t.co/emfeFPY4EU">https://t.co/emfeFPY4EU</a> <a href="https://t.co/vZxsa7lYxp">pic.twitter.com/vZxsa7lYxp</a></p>&mdash; Evolutionary Way (@EvolutionaryWay) <a href="https://twitter.com/EvolutionaryWay/status/1587374696261042176?ref_src=twsrc%5Etfw">November 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 
     <br />
@@ -204,8 +204,8 @@
             <a class="btn btn-xl btn-light m-2" href="play.html" target="_blank" onclick="wentToBiggerVersion()">Play a
                 bigger Version</a>
 
-            <a class="btn btn-xl btn-light m-2" href="game.html" target="_blank" onclick="wentToChessVersion()">Play a
-                smaller Version</a>
+            <!-- <a class="btn btn-xl btn-light m-2" href="game.html" target="_blank" onclick="wentToChessVersion()">Play a
+                smaller Version</a> -->
 
 
         </div>
