--- a/publicV1/play.html
+++ b/publicV1/play.html
@@ -64,14 +64,15 @@
 
 
 
-                    <p>Hit the Random buttom -> Start and enjoy the Stress Busting CHAOS
+                    <p>Hit the Random buttom -> Play and enjoy the Stress Busting CHAOS
                     <p>
                         <br />
                         <!-- logic buttons -->
                     <div class="controls">
-                        <button id="start"><span>Start</span></button>
-                        <button id="clear"><span>Clear</span></button>
                         <button id="random"><span>Random</span></button>
+                        <button id="start"><span>Play</span></button>
+                        <button id="clear"><span>Clear</span></button>
+                        
 
                     </div>
                     <br />
@@ -94,7 +95,7 @@
                     <!-- <div class="slideconstainer">
                         <input type="range" min="100" max="500" value="300" class="slisder" id="colorRange">
                       </div> -->
-
+                      <h6>Use desktop for better experience. Bookmark the page for daily stress busting.</h6>
 
 
                     <!-- <a class="btn btn-dark btn-xl" href="#services">Share</a> -->
@@ -138,6 +139,25 @@
                 target="_blank"><img
                     src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=EvolutionGame&button_colour=FF5F5F&font_colour=ffffff&font_family=Bree&outline_colour=000000&coffee_colour=FFDD00" /></a>
         </div>
+
+
+    </section>
+
+    <section class="callout">
+        <div class="container px-4 px-lg-5 text-center">
+            <p class="mx-auto mb-5">
+                Human brain is the most complex thing in the universe. <b>Evolution of Intelligent design?</b> Confused about
+                how evolution works? If you understand the rules of Physics and Chemistry, you can see the possibility
+                of atoms coming together to form a complex thing like our brain.
+                Read Best Books about Evolution and Origin of Life to Boost Your Understanding. Few books I read here
+                like Origin of Species, Origin Story, Genesis, Chaos Theory will help you to better understand and
+                explain evolution.
+            </p>
+
+            <a class="btn btn-primary btn-xl" href="https://www.blinkist.com" onclick="affiliateLinkClickedBiggerV()"
+                target="_blank">Take me there!</a>
+        </div>
+
 
 
     </section>
