--- a/publicV1/play.html
+++ b/publicV1/play.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -33,6 +34,24 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style> -->
 
+<!-- Meta Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1196034801124932');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1196034801124932&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+    
 </head>
 
 <body id="page-top">
@@ -251,6 +270,8 @@
 
         firebase.initializeApp(firebaseConfig);
         const analytics = firebase.analytics();
+        gtag('config', 'ID', { cookie_flags: 'max-age=7200;secure;samesite=none' });
+
     </script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
