changed to dictionary

--- a/publicV1/index.html
+++ b/publicV1/index.html
@@ -134,7 +134,7 @@
         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
         target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
-            <h6>Evolution or Intellignet Design, Get a free pdf on Evolution</h6>
+            <h6 style="color:#f16209">Evolution or Intellignet Design, Get a free pdf on Evolution</h6>
             <!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
             <div class="mc-field-group">
                 <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
@@ -311,7 +311,7 @@
                 History and Inventor</a>
             !
             <p class="text-muted small mb-0">Suggestions, Issues, Advertise - Email us to
-                <b>support@evolutiongame.online</b></p>
+                <b>support@DictionaryV2.com</b></p>
             <p class="text-muted small mb-0">Copyright &copy; Evolution Game 2022</p>
         </div>
     </footer>
