--- a/publicV1/play.html
+++ b/publicV1/play.html
@@ -277,7 +277,7 @@
                 </li>
             </ul>
             <p class="text-muted small mb-0">Suggestions, Issues, Advertise - Email us to
-                <b>support@evolutiongame.online</b>
+                <b>support@DictionaryV2.com</b>
             </p>
             <p class="text-muted small mb-0">Copyright &copy; Evolution Game 2022</p>
         </div>
